fix: fix Align Top Right for Horizontal Layout

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -310,8 +310,8 @@ main[tabindex="-1"] {
 
     /* Align Right */
     &.alignTopRight {
-      align-items: flex-end;
-      justify-content: flex-start;
+      align-items: flex-start;
+      justify-content: flex-end;
     }
 
     &.alignRight {
@@ -443,8 +443,8 @@ main[tabindex="-1"] {
 
       /* Align Right */
       &.tablet-alignTopRight {
-        align-items: flex-end;
-        justify-content: flex-start;
+        align-items: flex-start;
+        justify-content: flex-end;
       }
 
       &.tablet-alignRight {
@@ -578,8 +578,8 @@ main[tabindex="-1"] {
 
       /* Align Right */
       &.desktop-alignTopRight {
-        align-items: flex-end;
-        justify-content: flex-start;
+        align-items: flex-start;
+        justify-content: flex-end;
       }
 
       &.desktop-alignRight {
